--- a/index.html
+++ b/index.html
@@ -1,59 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title> Custom Search </title>
-    <style>
-        body {
-            background-color: #0e0e0e;
-        }
-        .style1 {
-            margin-top: 10px;
-            margin-bottom: 0px;
-            margin-right: 10px;
-            margin-left: 10px;
-            padding: 8px;
-        }
-
-        .button {
-            background-color: whitesmoke; /* Green */
-            border: none;
-            color: #555555;
-            padding: 16px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            -webkit-transition-duration: 0.4s; /* Safari */
-            transition-duration: 0.4s;
-            cursor: pointer;
-
-            padding: 1em;
-        }
-
-        .button {
-            color: #555555;
-            border: 2px solid #555555;
-        }
-
-        .button:hover {
-            background-color: whitesmoke;
-            color: #555555;
-        }
-
-        
-    </style>
-</head>
 <body>
 
 <center>
 <br> <br>
 <img src="https://raw.githubusercontent.com/dimuththarindu/CustomSearch/master/image.png" alt="Search"> 
 <br>
-<input class="style1" type="text" id="myInput" value="" onkeydown = "if (event.keyCode == 13) document.getElementById('btnSearch').click()">
+<input type="text" id="myInput" value="" onkeydown = "if (event.keyCode == 13) document.getElementById('btnSearch').click()">
 <br> <br>
 
-<button class="button" id= "btnSearch" onclick="myFunction()">Search</button>
+<button id = "btnSearch" onclick="myFunction()">Search</button>
 <p id="demo"></p>
 
 </center>
