--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
-  <script type="text/javascript" src="script.js"></script>
+    <title>Google Custom Search</title>
+    <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 
@@ -11,18 +12,15 @@
 </header>
 
 <section class="center">
-
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Search"> <br>
     <input type="text" id="myInput" value="" onkeydown = "if (event.keyCode == 13) document.getElementById('btnSearch').click()" class="SearchBar"> <br>
     <button id="btnSearch" onclick="myFunction()" class="SearchBtn" >Google Search</button> <br>
     <p id="SearchURLOutput" class="OutputURL"></p>
-    
 </section>
 
 <footer>
     <!-- <p>Footer</p> -->
 </footer>
-
 
 </body>
 </html>
