--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <p id="SearchURLOutput" class="OutputURL"></p>
 </section>
 
-<footer>
-    <!-- <p>Footer</p> -->
+<footer class="footer">    
+    <span>Powered by <strong>Google</strong> Search</span> <br>
+    <span>Hosted @ <strong>GitHub.com</strong></span>
 </footer>
 
 </body>
-</html>
+</html> 
