--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Google Custom Search</title>
+    <link rel="shortcut icon" type="image/x-icon" href="https://www.google.com/images/branding/product/ico/googleg_lodp.ico" />
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="script.js"></script>
 </head>
