--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 <section class="center">
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Search"> <br>
-    <input type="text" id="myInput" value="" onkeydown = "if (event.keyCode == 13) document.getElementById('btnSearch').click()" class="SearchBar"> <br>
-    <button id="btnSearch" onclick="myFunction()" class="SearchBtn" >Google Search</button> <br>
+    <input type="text" id="myInput" value="" onkeydown = "if (event.keyCode == 13) { document.getElementById('btnSearchNormal').click(); document.getElementById('btnSearchGDrive').click(); } " class="SearchBar"> <br>
+    <button id="btnSearchNormal" onclick="funWebIndex()" class="SearchBtn" >Web Search</button> <br>
+    <button id="btnSearchGDrive" onclick="funGoogleDrive()" class="SearchBtn" >Google Drive Search</button> <br>
     <p id="SearchURLOutput" class="OutputURL"></p>
 </section>
 
